Fix vertically squashed images

--- a/source/_assets/sass/_themes.scss
+++ b/source/_assets/sass/_themes.scss
@@ -61,8 +61,6 @@ section.theme {
 		&, img {
 
 			display: block;
-
-			max-height: 80vh;
 			width: 100%;
 
 		}
